--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -22,6 +22,7 @@ $title-tablet:       36px;
 $title-mobile:       24px;
 
 $normal-text:        14px;
+$normal-mobile-text: 12px;
 
 $heading-desktop:    24px;
 $heading-mobile:     18px;
