--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,8 @@
 // ****************
 // * Fonts Import *
 // ****************
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,400;1,500&family=Playfair+Display:ital,wght@0,700;1,400&display=swap');$montserrat: 'Montserrat', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,400;1,500&family=Playfair+Display:ital,wght@0,700;1,400&display=swap');
+$montserrat: 'Montserrat', sans-serif;
 $playfair: 'Playfair Display', serif;
 
 // *******************
