Info Card + Image Cover Fix + Ingredients Stylings :sparkles:

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -37,6 +37,8 @@ $ingredients-mobile: 14px;
 $info-desktop:       14px;
 $info-mobile:        10px;
 
+$info-subtitle-desk: 10px;
+$info-subtitle-mob:  10px;
 // ******************
 // * Font Typefaces *
 // ******************
