--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -47,4 +47,7 @@ body {
     @include breakpoint('m'){
         max-width: 1024px;
     }
+    @include breakpoint('l'){
+        max-width: 1280px;
+    }
 }
