Added Footer + Width Fix for Instructions Section :sparkles:

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -39,6 +39,11 @@ $info-mobile:        10px;
 
 $info-subtitle-desk: 10px;
 $info-subtitle-mob:  10px;
+
+$recipe-link-desk:   16px;
+$recipe-link-mob:    12px;
+
+$footer:             14px;
 // ******************
 // * Font Typefaces *
 // ******************
