Finished Instruction Section :rocket:

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -40,6 +40,10 @@ $info-mobile:        10px;
 $info-subtitle-desk: 10px;
 $info-subtitle-mob:  10px;
 
+$instruction-heading:24px;
+$instruction-text:   16px;
+
+
 $recipe-link-desk:   16px;
 $recipe-link-mob:    12px;
 
