Last Comments Addedd :package:

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -1,5 +1,11 @@
+// ************ //
+// * Import's * //
+// ************ //
 @import "variables";
-// * Global Stylings * 
+
+// *******************
+// * Global Stylings *
+// ******************* 
 html {
     margin: 0;
     padding: 0;
