--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -1,7 +1,13 @@
+// ************ //
+// * Import's * //
+// ************ //
 @import "../variables";
 @import "../mixins";
 @import "../globals";
+
+// ************************* //
 // * Header Layout Styling * //
+// ************************* //
 .header{
     max-width: 422px;
     text-align: left;
